virtual thread. login implemented